...
            ("childrens day", "こどもの日"),
            ("childrens day (in lieu)", "こどもの日 振替休日"),
            ("substitute holiday", "振替休日"),
            // 其他日本节假日
            ("new years day", "元日"),
            ("coming of age day", "成人の日"),
            ("national foundation day", "建国記念の日"),
            ("emperors birthday", "天皇誕生日"),
            ("the emperors birthday", "天皇誕生日"),
            ("vernal equinox day", "春分の日"),
            ("vernal equinox day (in lieu)", "春分の日 振替休日"),
            ("showa day", "昭和の日"),
            ("marine day", "海の日"),
            ("mountain day", "山の日"),
            ("respect for the aged day", "敬老の日"),
            ("autumnal equinox day", "秋分の日"),
...
